Add site header

--- a/src/components/Functional/MarkerPin/MarkerPin.scss
+++ b/src/components/Functional/MarkerPin/MarkerPin.scss
@@ -1,6 +1,6 @@
 .marker-pin-container{
   background-color:white;
-  border:1px solid deeppink;
+  border:1px solid;
   height:30px;
   border-radius:50%;
   -moz-border-radius:50%;
